update docker-compose file to take new directory structure into account

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,12 @@ version: "3.7"
 services:
   sales-rest-api:
     build:
-      context: ./sales/rest-api
+      context: ./sales/api
       dockerfile: Dockerfile
     volumes:
-    - "./sales/rest-api:/code"
+    - "./sales/api:/code"
     ports:
     - 8080:5000
-
-  sales-graphql-api:
-    build:
-      context: ./sales/graphql-api
-      dockerfile: Dockerfile
-    volumes:
-    - "./sales/graphql-api:/code"
-    ports:
-    - 8081:5000
 
   sales-db:
     build:
