set FLASK_ENV environment variable to development to reload on code change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./sales/api
       dockerfile: Dockerfile
+    environment:
+      FLASK_ENV: development
     volumes:
     - "./sales/api:/code"
     ports:
